--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetailActivity"
+    tools:context="com.mario.gonzaga_10118390.mytestapp.DetailActivity"
     android:orientation="vertical">
 
 
@@ -46,6 +46,7 @@
         android:layout_marginTop="25dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:textColor="@color/blue"
         android:text="TextView" />
 
     <TextView
@@ -54,6 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:textColor="@color/blue"
         android:text="TextView" />
 
 
