--- a/app/src/main/res/layout/fragment_first_screen.xml
+++ b/app/src/main/res/layout/fragment_first_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".onboarding.screens.FirstScreen">
+    tools:context="com.mario.gonzaga_10118390.mytestapp.onboarding.screens.FirstScreen">
 
 
     <ImageView
@@ -22,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:textColor="@color/blue"
         android:text="@string/food"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -37,6 +38,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="50dp"
         android:gravity="center"
+        android:textColor="@color/green"
         android:text="@string/lorem"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
