--- a/app/src/main/res/layout/fragment_third_screen.xml
+++ b/app/src/main/res/layout/fragment_third_screen.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".onboarding.screens.ThirdScreen">
+    tools:context="com.mario.gonzaga_10118390.mytestapp.onboarding.screens.ThirdScreen">
 
     <ImageView
         android:id="@+id/imageView3"
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="@string/payment"
+        android:textColor="@color/blue"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,6 +37,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="50dp"
         android:gravity="center"
+        android:textColor="@color/green"
         android:text="@string/lorem3"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
